[package]
name = "alloc-checked"
version = "0.1.0"
edition = "2021"

[package.metadata]
rust-version = "nightly"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "nightly"]

[features]
default = []
no_std = ["hashbrown"]

[dependencies]
hashbrown = { version = "0.14", optional = true }

[dev-dependencies]
libc-print = "0.1.23"

[build-dependencies]
rustc_version = "0.4.1"
