[package]
name = "alloc-checked"
description = "Collections that don't panic on alloc failures"
authors = ["Adam Cimarosti <adam@questdb.io>"]
version = "0.1.2"
edition = "2021"
repository = "https://github.com/questdb/alloc-checked"
keywords = ["alloc", "collections", "no-std", "safe-allocation", "container"]
categories = ["data-structures", "memory-management", "no-std", "rust-patterns"]
license = "MIT OR Apache-2.0"

[package.metadata]
rust-version = "nightly"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "nightly"]

[features]
default = []
no_std = []
