[package]
name = "alloc-checked"
description = "Collections that don't panic on alloc failures"
authors = ["Adam Cimarosti <adam@questdb.io>"]
version = "0.1.2"
edition = "2021"
repository = "https://github.com/questdb/alloc-checked"
keywords = ["alloc", "collections", "no-std", "safe-allocation", "container"]
categories = ["data-structures", "memory-management", "no-std", "rust-patterns"]
license = "MIT OR Apache-2.0"

[package.metadata]
rust-version = "nightly"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "nightly"]

[dependencies.hashbrown]
version = "0.15.1"
optional = true
default-features = false
features = [
    "nightly",
    "default-hasher",
    "inline-more",
    "allocator-api2",
    "equivalent",
    "raw-entry"
]

[features]
default = ["hash_collections"]
hash_collections = ["hashbrown"]
no_std = []
